# market-research-agent

./: .gitignore  README.md
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.js
client/src/components/: Navbar.jsx  Research.js
client/src/pages/: Articles.js  Research.js
client/src/styles/: Articles.css  Navbar.css  Research.css
server/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
server/app/: main.py  tools.py
